--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
           <!--MENU-->
           <div class="menu-list d-flex align-items-center gap-2 flex-wrap">
-            <a href="jado.html"><button style="background: rgb(247, 156, 186);">Home</button></a></th></a>
+            <a href="index.html"><button style="background: rgb(247, 156, 186);">Home</button></a></th></a>
             <a href="gallery.html"><button style="background: rgb(247, 156, 186);">Gallery</button></a></th></a>
             <a href="contact.html"><button style="background: rgb(247, 156, 186);">contact</button></a></th></a>
             <a href="about.html"><button style="background: rgb(247, 156, 186);">about Us</button></a></th></a>
@@ -101,4 +101,5 @@
       updateTime();
     </script>
   </body>
+
 </html>
